--- a/eficiencia.html
+++ b/eficiencia.html
@@ -66,9 +66,9 @@
                 </thead>
                 <tbody>
                     <tr>
-                        <td><input type="text" class="power-input" id="sellPower" placeholder="PHs"></td>
+                        <td><input type="text" class="power-input" id="sellPower" placeholder="THs"></td>
                         <td><input type="text" class="bonus-input" id="sellBonus" placeholder="%"></td>
-                        <td><input type="text" class="power-input" id="buyPower" placeholder="PHs"></td>
+                        <td><input type="text" class="power-input" id="buyPower" placeholder="THs"></td>
                         <td><input type="text" class="bonus-input" id="buyBonus" placeholder="%"></td>
                     </tr>
                 </tbody>
