--- a/eficiencia.html
+++ b/eficiencia.html
@@ -31,25 +31,25 @@
             </div>
             <div id="results">
                 <table>
-                    <tbody>
-                        <tr>
-                            <td>Miners:</td>
-                            <td><span id="miners"></span></td>
-                        </tr>
-                        <tr>
-                            <td>Bônus(%):</td>
-                            <td><span id="bonusPercent"></span></td>
-                        </tr>
-                        <tr>
-                            <td>Bônus:</td>
-                            <td><span id="bonus"></span></td>
-                        </tr>
-                        <tr>
-                            <td>Poder Total:</td>
-                            <td><span id="totalPower"></span></td>
-                        </tr>                    
-                    </tbody>
-                </table>
+                <tbody>
+                    <tr>
+                        <td>Miners:</td>
+                        <td><span id="miners"></span></td>
+                    </tr>
+                    <tr>
+                        <td>Bônus(%):</td>
+                        <td><span id="bonusPercent"></span></td>
+                    </tr>
+                    <tr>
+                        <td>Bônus:</td>
+                        <td><span id="bonus"></span></td>
+                    </tr>
+                    <tr>
+                        <td>Poder Total:</td>
+                        <td><span id="totalPower"></span></td>
+                    </tr>                    
+                </tbody>
+            </table>
             </div>
             <table>
                 <thead>
@@ -58,23 +58,45 @@
                         <th colspan="2">COMPRA/RECOMPENSA</th>
                     </tr>
                     <tr>
-                        <th>Poder(THs)</th>
+                        <th>Poder(PHs)</th>
                         <th>Bônus(%)</th>
-                        <th>Poder(THs)</th>
+                        <th>Poder(PHs)</th>
                         <th>Bônus(%)</th>
                     </tr>
                 </thead>
                 <tbody>
                     <tr>
-                        <td><input type="text" class="power-input" id="sellPower" placeholder="THs"></td>
-                        <td><input type="text" class="bonus-input" id="sellBonus" placeholder="%"></td>
-                        <td><input type="text" class="power-input" id="buyPower" placeholder="THs"></td>
-                        <td><input type="text" class="bonus-input" id="buyBonus" placeholder="%"></td>
+                        <td><input type="text" class="power-input" placeholder="PHs" id="sellPower"></td>
+                        <td><input type="text" class="bonus-input" placeholder="%" id="sellBonus"></td>
+                        <td><input type="text" class="power-input" placeholder="PHs" id="buyPower"></td>
+                        <td><input type="text" class="bonus-input" placeholder="%" id="buyBonus"></td>
                     </tr>
                 </tbody>
             </table>
-            <div class="calculate-container">
+            <div class="calculate-button-container">
                 <button id="calculateButton">Calcular</button>
+            </div>
+            <div id="newResults">
+                <table>
+                    <tbody>
+                        <tr>
+                            <td>Miners:</td>
+                            <td><span id="newMiners"></span></td>
+                        </tr>
+                        <tr>
+                            <td>Bônus(%):</td>
+                            <td><span id="newBonuspercent"></span></td>
+                        </tr>
+                        <tr>
+                            <td>Bônus:</td>
+                            <td><span id="newBonus"></span></td>
+                        </tr>
+                        <tr>
+                            <td>Poder Total:</td>
+                            <td><span id="newPower"></span> <span id="powerChange"></span></td>
+                        </tr>                    
+                    </tbody>
+                </table>
             </div>
         </div>
     </div>
