--- a/eficiencia.html
+++ b/eficiencia.html
@@ -51,6 +51,7 @@
                 </tbody>
             </table>
             </div>
+            <div>
             <table>
                 <thead>
                     <tr>
@@ -73,6 +74,7 @@
                     </tr>
                 </tbody>
             </table>
+            </div>
             <div class="calculate-button-container">
                 <button id="calculateButton">Calcular</button>
             </div>
