--- a/eficiencia.html
+++ b/eficiencia.html
@@ -59,17 +59,17 @@
                         <th colspan="2">COMPRA/RECOMPENSA</th>
                     </tr>
                     <tr>
-                        <th>Poder(PHs)</th>
+                        <th>Poder(THs)</th>
                         <th>Bônus(%)</th>
-                        <th>Poder(PHs)</th>
+                        <th>Poder(THs)</th>
                         <th>Bônus(%)</th>
                     </tr>
                 </thead>
                 <tbody>
                     <tr>
-                        <td><input type="text" class="power-input" placeholder="PHs" id="sellPower"></td>
+                        <td><input type="text" class="power-input" placeholder="THs" id="sellPower"></td>
                         <td><input type="text" class="bonus-input" placeholder="%" id="sellBonus"></td>
-                        <td><input type="text" class="power-input" placeholder="PHs" id="buyPower"></td>
+                        <td><input type="text" class="power-input" placeholder="THs" id="buyPower"></td>
                         <td><input type="text" class="bonus-input" placeholder="%" id="buyBonus"></td>
                     </tr>
                 </tbody>
