--- a/eficiencia.html
+++ b/eficiencia.html
@@ -82,7 +82,7 @@
                 <table>
                     <tbody>
                         <tr>
-                            <td>Poder Total:</td>
+                            <td>Ganho/Perda:</td>
                             <td><span id="newPower"></span> <span id="powerChange"></span></td>
                         </tr>                    
                     </tbody>
