--- a/eficiencia.html
+++ b/eficiencia.html
@@ -83,7 +83,7 @@
                     <tbody>
                         <tr>
                             <td>Ganho/Perda:</td>
-                            <td><span id="newPower"></span> <span id="powerChange"></span></td>
+                            <td><span id="finalPower"></span> <span id="powerChange"></span></td>
                         </tr>                    
                     </tbody>
                 </table>
