--- a/eficiencia.html
+++ b/eficiencia.html
@@ -55,7 +55,7 @@
             <table>
                 <thead>
                     <tr>
-                        <th colspan="2">VENDA/QUEIMA</th>
+                        <th colspan="2" style="background-color: #ff0000">VENDA/QUEIMA</th>
                         <th colspan="2">COMPRA/RECOMPENSA</th>
                     </tr>
                     <tr>
@@ -67,8 +67,8 @@
                 </thead>
                 <tbody>
                     <tr>
-                        <td><input type="text" class="power-input" placeholder="THs" id="sellPower"></td>
-                        <td><input type="text" class="bonus-input" placeholder="%" id="sellBonus"></td>
+                        <td style="background-color: #ff0000"><input type="text" class="power-input" placeholder="THs" id="sellPower"></td>
+                        <td style="background-color: #ff0000"><input type="text" class="bonus-input" placeholder="%" id="sellBonus"></td>
                         <td><input type="text" class="power-input" placeholder="THs" id="buyPower"></td>
                         <td><input type="text" class="bonus-input" placeholder="%" id="buyBonus"></td>
                     </tr>
@@ -81,7 +81,7 @@
             <div id="newResults">
                 <table>
                     <tbody>
-                        <tr>
+                        <tr style="font-weight: bold">
                             <td>Ganho/Perda:</td>
                             <td><span id="finalPower"></span> <span id="powerChange"></span></td>
                         </tr>                    
