--- a/eficiencia.html
+++ b/eficiencia.html
@@ -59,16 +59,16 @@
                         <th colspan="2">COMPRA/RECOMPENSA</th>
                     </tr>
                     <tr>
-                        <th>Poder(THs)</th>
-                        <th>Bônus(%)</th>
+                        <th style="background-color: #ff0000">Poder(THs)</th>
+                        <th style="background-color: #ff0000">Bônus(%)</th>
                         <th>Poder(THs)</th>
                         <th>Bônus(%)</th>
                     </tr>
                 </thead>
                 <tbody>
                     <tr>
-                        <td style="background-color: #ff0000"><input type="text" class="power-input" placeholder="THs" id="sellPower"></td>
-                        <td style="background-color: #ff0000"><input type="text" class="bonus-input" placeholder="%" id="sellBonus"></td>
+                        <td><input type="text" class="power-input" placeholder="THs" id="sellPower"></td>
+                        <td><input type="text" class="bonus-input" placeholder="%" id="sellBonus"></td>
                         <td><input type="text" class="power-input" placeholder="THs" id="buyPower"></td>
                         <td><input type="text" class="bonus-input" placeholder="%" id="buyBonus"></td>
                     </tr>
