--- a/eficiencia.html
+++ b/eficiencia.html
@@ -61,14 +61,24 @@
                     <tr>
                         <th style="background-color: #ff0000">Poder(THs)</th>
                         <th style="background-color: #ff0000">Bônus(%)</th>
-                        <th>Poder(THs)</th>
-                        <th>Bônus(%)</th>
                     </tr>
                 </thead>
                 <tbody>
                     <tr>
                         <td><input type="text" class="power-input" placeholder="THs" id="sellPower"></td>
                         <td><input type="text" class="bonus-input" placeholder="%" id="sellBonus"></td>
+                    </tr>
+                </tbody>
+            </table>                  
+            <table>
+                <thead>
+                    <tr>
+                        <th>Poder(THs)</th>
+                        <th>Bônus(%)</th>
+                    </tr>
+                </thead>
+                <tbody>
+                    <tr>
                         <td><input type="text" class="power-input" placeholder="THs" id="buyPower"></td>
                         <td><input type="text" class="bonus-input" placeholder="%" id="buyBonus"></td>
                     </tr>
