--- a/eficiencia.html
+++ b/eficiencia.html
@@ -26,7 +26,7 @@
             <h1>Calculadora de Eficiência</h1>
             <h3>Link da Sala</h3>
             <div class="input-container">
-                <input type="text" id="linkInput" placeholder="Insira o link da sala">
+                <input type="text" id="linkInput" placeholder="Parte do link depois do /p/">
                 <button id="searchButton">Pesquisar</button>
             </div>
             <div id="results">
