--- a/eficiencia.html
+++ b/eficiencia.html
@@ -24,9 +24,9 @@
         </div>
         <div class="calc">
             <h1>Calculadora de Eficiência</h1>
-            <h3>Link da Sala</h3>
+            <h3>Link da Sala(Após /p/)</h3>
             <div class="input-container">
-                <input type="text" id="linkInput" placeholder="Parte do link depois do /p/">
+                <input type="text" id="linkInput" placeholder="RKFox">
                 <button id="searchButton">Pesquisar</button>
             </div>
             <div id="results">
