--- a/eficiencia.html
+++ b/eficiencia.html
@@ -24,7 +24,7 @@
         </div>
         <div class="calc">
             <h1>Calculadora de Eficiência</h1>
-            <h3>Link da Sala</h3> (após /p/)
+            <h3>Link da Sala (após /p/)</h3>
             <div class="input-container">
                 <input type="text" id="linkInput" placeholder="RKFox">
                 <button id="searchButton">Pesquisar</button>
