--- a/eficiencia.html
+++ b/eficiencia.html
@@ -96,7 +96,11 @@
                         <tr style="font-weight: bold">
                             <td>Ganho/Perda:</td>
                             <td><span id="finalPower"></span> <span id="powerChange"></span></td>
-                        </tr>                    
+                        </tr>
+                        <tr style="font-weight: bold">
+                            <td>Novo Poder:</td>
+                            <td><span id="novoPower"></span></td>
+                        </tr>
                     </tbody>
                 </table>
             </div>
