--- a/eficiencia.html
+++ b/eficiencia.html
@@ -17,10 +17,14 @@
             <!--End rollercoin.com code-->
         </div>    
         <div class="profile">
-            <img src="/images/profile.png" alt="Foto de Perfil" class="profile-pic">
+            <a href="https://rk-fox.github.io/">
+                <img src="/images/profile.png" alt="Foto de Perfil" class="profile-pic">
+            </a>
         </div>
         <div class="banner">
-            <img src="/images/banner.png" alt="Banner" class="banner-img">
+            <a href="https://rk-fox.github.io/">
+                <img src="/images/banner.png" alt="Banner" class="banner-img">
+            </a>
         </div>
         <div class="calc">
             <h1>Calculadora de Eficiência</h1>
