--- a/ranking.html
+++ b/ranking.html
@@ -16,12 +16,16 @@
                 <img src="https://static.rollercoin.com/static/img/ref/gen2/w320h50.png"/> 
             </a> 
             <!--End rollercoin.com code-->
-        </div>    
+        </div>
         <div class="profile">
-            <img src="/images/profile.png" alt="Foto de Perfil" class="profile-pic">
+            <a href="https://rk-fox.github.io/">
+                <img src="/images/profile.png" alt="Foto de Perfil" class="profile-pic">
+            </a>
         </div>
         <div class="banner">
-            <img src="/images/banner.png" alt="Banner" class="banner-img">
+            <a href="https://rk-fox.github.io/">
+                <img src="/images/banner.png" alt="Banner" class="banner-img">
+            </a>
         </div>
     <div class="ranking">
         <h1>Ranking da Comunidade</h1>
