--- a/impacto.html
+++ b/impacto.html
@@ -66,5 +66,6 @@
             <h4><p>Contato Profissional: <a href="mailto:canalrkfox@gmail.com">canalrkfox@gmail.com</a></p></h4>
         </div>
     </div>
+    </div>
 </body>
 </html>
