--- a/impacto.html
+++ b/impacto.html
@@ -33,27 +33,34 @@
                 <input type="text" id="linkInput" placeholder="RKFox">
                 <button id="searchButton">Pesquisar</button>
             </div>
-            <div id="results">
-                <table>
-                <tbody>
+            <div>
+            <table>
+                <thead>
                     <tr>
-                        <td>Miners:</td>
-                        <td><span id="miners"></span></td>
+                        <th colspan="2">Planejamento de Menor Impacto</th>
                     </tr>
                     <tr>
-                        <td>Bônus(%):</td>
-                        <td><span id="bonusPercent"></span></td>
+                        <th colspan="2">1º Lugar</th>
+                    </tr>
+                </thead>
+                <tbody>
+                    <tr>
+                        <img src="https://static.rollercoin.com/static/img/market/miners/da_vincis_elizabeth.gif?v=1" >
+                    </tr>
+                    <tr>
+                        <td>Poder:</td>
+                        <td><span id="poder1"></span></td>
                     </tr>
                     <tr>
                         <td>Bônus:</td>
-                        <td><span id="bonus"></span></td>
+                        <td><span id="bonus1"></span></td>
                     </tr>
                     <tr>
-                        <td>Poder Total:</td>
-                        <td><span id="totalPower"></span></td>
-                    </tr>                    
+                        <td style="font-size: 16px">Impacto Total:</td>
+                        <td style="font-size: 16px"><span id="impact1"></span></td>
+                    </tr>
                 </tbody>
-            </table>
+            </table>                  
             </div>
         <div class="ref">
             <!--Start rollercoin.com code-->
