--- a/impacto.html
+++ b/impacto.html
@@ -60,6 +60,50 @@
                         <td style="font-size: 16px"><span id="impact1"></span></td>
                     </tr>
                 </tbody>
+                <thead>
+                    <tr>
+                        <th colspan="2">2º Lugar</th>
+                    </tr>
+                </thead>
+                <tbody>
+                    <tr>
+                        <td colspan="2"><img src="https://static.rollercoin.com/static/img/market/miners/da_vincis_elizabeth.gif?v=1"></td>
+                    </tr>
+                    <tr>
+                        <td>Poder:</td>
+                        <td><span id="poder1"></span></td>
+                    </tr>
+                    <tr>
+                        <td>Bônus:</td>
+                        <td><span id="bonus1"></span></td>
+                    </tr>
+                    <tr>
+                        <td style="font-size: 16px">Impacto Total:</td>
+                        <td style="font-size: 16px"><span id="impact1"></span></td>
+                    </tr>
+                </tbody>
+                <thead>
+                    <tr>
+                        <th colspan="2">3º Lugar</th>
+                    </tr>
+                </thead>
+                <tbody>
+                    <tr>
+                        <td colspan="2"><img src="https://static.rollercoin.com/static/img/market/miners/da_vincis_elizabeth.gif?v=1"></td>
+                    </tr>
+                    <tr>
+                        <td>Poder:</td>
+                        <td><span id="poder1"></span></td>
+                    </tr>
+                    <tr>
+                        <td>Bônus:</td>
+                        <td><span id="bonus1"></span></td>
+                    </tr>
+                    <tr>
+                        <td style="font-size: 16px">Impacto Total:</td>
+                        <td style="font-size: 16px"><span id="impact1"></span></td>
+                    </tr>
+                </tbody>
             </table>                  
             </div>
         <div class="ref">
