--- a/impacto.html
+++ b/impacto.html
@@ -56,8 +56,8 @@
                         <td><span id="bonus1"></span></td>
                     </tr>
                     <tr>
-                        <td style="font-size: 16px">Impacto Total:</td>
-                        <td style="font-size: 16px"><span id="impact1"></span></td>
+                        <td style="font-weight: bold">Impacto Total:</td>
+                        <td style="font-weight: bold"><span id="impact1"></span></td>
                     </tr>
                 </tbody>
                 <thead>
@@ -71,15 +71,15 @@
                     </tr>
                     <tr>
                         <td>Poder:</td>
-                        <td><span id="poder1"></span></td>
+                        <td><span id="poder2"></span></td>
                     </tr>
                     <tr>
                         <td>Bônus:</td>
-                        <td><span id="bonus1"></span></td>
+                        <td><span id="bonus2"></span></td>
                     </tr>
                     <tr>
-                        <td style="font-size: 16px">Impacto Total:</td>
-                        <td style="font-size: 16px"><span id="impact1"></span></td>
+                        <td style="font-weight: bold">Impacto Total:</td>
+                        <td style="font-weight: bold"><span id="impact2"></span></td>
                     </tr>
                 </tbody>
                 <thead>
@@ -93,15 +93,15 @@
                     </tr>
                     <tr>
                         <td>Poder:</td>
-                        <td><span id="poder1"></span></td>
+                        <td><span id="poder3"></span></td>
                     </tr>
                     <tr>
                         <td>Bônus:</td>
-                        <td><span id="bonus1"></span></td>
+                        <td><span id="bonus3"></span></td>
                     </tr>
                     <tr>
-                        <td style="font-size: 16px">Impacto Total:</td>
-                        <td style="font-size: 16px"><span id="impact1"></span></td>
+                        <td style="font-weight: bold">Impacto Total:</td>
+                        <td style="font-weight: bold"><span id="impact3"></span></td>
                     </tr>
                 </tbody>
             </table>                  
