--- a/impacto.html
+++ b/impacto.html
@@ -118,6 +118,6 @@
         </div>
     </div>
     </div>
-    <script src="efficiency.js"></script>
+    <script src="impact.js"></script>
 </body>
 </html>
