--- a/impacto.html
+++ b/impacto.html
@@ -59,6 +59,14 @@
                         <td style="font-weight: bold">Impacto Total:</td>
                         <td style="font-weight: bold"><span id="impact1"></span></td>
                     </tr>
+                    <tr>
+                        <td>Faz parte de Set?</td>
+                        <td><span id="set1"></span></td>
+                    </tr>
+                    <tr>
+                        <td>Duplicada para merge?</td>
+                        <td><span id="merge1"></span></td>
+                    </tr>                    
                 </tbody>
                 <thead>
                     <tr>
@@ -81,6 +89,14 @@
                         <td style="font-weight: bold">Impacto Total:</td>
                         <td style="font-weight: bold"><span id="impact2"></span></td>
                     </tr>
+                    <tr>
+                        <td>Faz parte de Set?</td>
+                        <td><span id="set2"></span></td>
+                    </tr>
+                    <tr>
+                        <td>Duplicada para merge?</td>
+                        <td><span id="merge2"></span></td>
+                    </tr>                      
                 </tbody>
                 <thead>
                     <tr>
@@ -103,6 +119,14 @@
                         <td style="font-weight: bold">Impacto Total:</td>
                         <td style="font-weight: bold"><span id="impact3"></span></td>
                     </tr>
+                    <tr>
+                        <td>Faz parte de Set?</td>
+                        <td><span id="set3"></span></td>
+                    </tr>
+                    <tr>
+                        <td>Duplicada para merge?</td>
+                        <td><span id="merge3"></span></td>
+                    </tr>                      
                 </tbody>
             </table>                  
             </div>
