--- a/impacto.html
+++ b/impacto.html
@@ -34,6 +34,8 @@
                 <button id="searchButton">Pesquisar</button>
             </div>
             <div>
+                <img id="avatar" src="" alt="Avatar do usuário" style="display: none;">
+                <h3 id="welcomeMessage"></h3>
             <table>
                 <thead>
                     <tr>
