--- a/impacto.html
+++ b/impacto.html
@@ -34,8 +34,9 @@
                 <button id="searchButton">Pesquisar</button>
             </div>
             <div>
-                <img id="avatar" src="" alt="Avatar do usuário" style="display: none;">
+                <img id="avatar" src="" alt="Avatar do usuário">
                 <h3 id="welcomeMessage"></h3>
+                <img id="avatar" src="" alt="Avatar do usuário">
             <table>
                 <thead>
                     <tr>
