--- a/impacto.html
+++ b/impacto.html
@@ -34,7 +34,7 @@
                 <button id="searchButton">Pesquisar</button>
             </div>
             <div>
-                <img id="avatar" src="" alt="Avatar do usuário" style="display: none;">
+                <img id="avatar" src="" alt="Avatar do usuário" style="display: none; margin: auto;">
                 <h3 id="welcomeMessage"></h3>
             <table>
                 <thead>
