--- a/impacto.html
+++ b/impacto.html
@@ -50,6 +50,10 @@
                         <td colspan="2"><img src="https://static.rollercoin.com/static/img/market/miners/da_vincis_elizabeth.gif?v=1"></td>
                     </tr>
                     <tr>
+                        <td>Miner:</td>
+                        <td><span id="nome1"></span></td>
+                    </tr>
+                    <tr>
                         <td>Poder:</td>
                         <td><span id="poder1"></span></td>
                     </tr>
@@ -80,6 +84,10 @@
                         <td colspan="2"><img src="https://static.rollercoin.com/static/img/market/miners/da_vincis_elizabeth.gif?v=1"></td>
                     </tr>
                     <tr>
+                        <td>Miner:</td>
+                        <td><span id="nome2"></span></td>
+                    </tr>
+                    <tr>
                         <td>Poder:</td>
                         <td><span id="poder2"></span></td>
                     </tr>
@@ -108,6 +116,10 @@
                 <tbody>
                     <tr>
                         <td colspan="2"><img src="https://static.rollercoin.com/static/img/market/miners/da_vincis_elizabeth.gif?v=1"></td>
+                    </tr>
+                    <tr>
+                        <td>Miner:</td>
+                        <td><span id="nome3"></span></td>
                     </tr>
                     <tr>
                         <td>Poder:</td>
