--- a/impacto.html
+++ b/impacto.html
@@ -70,7 +70,7 @@
                         <td><span id="set1"></span></td>
                     </tr>
                     <tr>
-                        <td>Duplicada para merge?</td>
+                        <td>Repetida/Merge:</td>
                         <td><span id="merge1"></span></td>
                     </tr>                    
                 </tbody>
@@ -104,7 +104,7 @@
                         <td><span id="set2"></span></td>
                     </tr>
                     <tr>
-                        <td>Duplicada para merge?</td>
+                        <td>Repetida/Merge:</td>
                         <td><span id="merge2"></span></td>
                     </tr>                      
                 </tbody>
@@ -138,7 +138,7 @@
                         <td><span id="set3"></span></td>
                     </tr>
                     <tr>
-                        <td>Duplicada para merge?</td>
+                        <td>Repetida/Merge?</td>
                         <td><span id="merge3"></span></td>
                     </tr>                      
                 </tbody>
