--- a/impacto.html
+++ b/impacto.html
@@ -47,7 +47,7 @@
                 </thead>
                 <tbody>
                     <tr>
-                        <td colspan="2"><img src="https://static.rollercoin.com/static/img/market/miners/da_vincis_elizabeth.gif?v=1"></td>
+                        <td colspan="2"><img id="img1" src="" style="display: none;"></td>
                     </tr>
                     <tr>
                         <td>Miner:</td>
@@ -81,7 +81,7 @@
                 </thead>
                 <tbody>
                     <tr>
-                        <td colspan="2"><img src="https://static.rollercoin.com/static/img/market/miners/da_vincis_elizabeth.gif?v=1"></td>
+                        <td colspan="2"><img id="img2" src="" style="display: none;"></td>
                     </tr>
                     <tr>
                         <td>Miner:</td>
@@ -115,7 +115,7 @@
                 </thead>
                 <tbody>
                     <tr>
-                        <td colspan="2"><img src="https://static.rollercoin.com/static/img/market/miners/da_vincis_elizabeth.gif?v=1"></td>
+                        <td colspan="2"><img id="img3" src="" style="display: none;"></td>
                     </tr>
                     <tr>
                         <td>Miner:</td>
