--- a/impacto.html
+++ b/impacto.html
@@ -47,7 +47,7 @@
                 </thead>
                 <tbody>
                     <tr>
-                        <td colspan="2"><img id="img1" src="" style="display: none;"></td>
+                        <td colspan="2"><img id="img1" src="" style="display: none; margin: auto;"></td>
                     </tr>
                     <tr>
                         <td>Miner:</td>
@@ -81,7 +81,7 @@
                 </thead>
                 <tbody>
                     <tr>
-                        <td colspan="2"><img id="img2" src="" style="display: none;"></td>
+                        <td colspan="2"><img id="img2" src="" style="display: none; margin: auto;"></td>
                     </tr>
                     <tr>
                         <td>Miner:</td>
@@ -115,19 +115,19 @@
                 </thead>
                 <tbody>
                     <tr>
-                        <td colspan="2"><img id="img3" src="" style="display: none;"></td>
+                        <td colspan="2"><img id="img3" src="" style="display: none; margin: auto;"></td>
                     </tr>
                     <tr>
                         <td>Miner:</td>
-                        <td><span id="nome3"></span></td>
+                        <td style="font-weight: bold"><span id="nome3"></span></td>
                     </tr>
                     <tr>
                         <td>Poder:</td>
-                        <td><span id="poder3"></span></td>
+                        <td style="font-weight: bold"><span id="poder3"></span></td>
                     </tr>
                     <tr>
                         <td>Bônus:</td>
-                        <td><span id="bonus3"></span></td>
+                        <td style="font-weight: bold"><span id="bonus3"></span></td>
                     </tr>
                     <tr>
                         <td style="font-weight: bold">Impacto Total:</td>
@@ -135,11 +135,11 @@
                     </tr>
                     <tr>
                         <td>Faz parte de Set?</td>
-                        <td><span id="set3"></span></td>
+                        <td style="font-weight: bold"><span id="set3"></span></td>
                     </tr>
                     <tr>
                         <td>Repetida/Merge?</td>
-                        <td><span id="merge3"></span></td>
+                        <td style="font-weight: bold"><span id="merge3"></span></td>
                     </tr>                      
                 </tbody>
             </table>                  
