--- a/impacto.html
+++ b/impacto.html
@@ -55,11 +55,11 @@
                     </tr>
                     <tr>
                         <td>Poder:</td>
-                        <td><span id="poder1"></span></td>
+                        <td style="font-weight: bold"><span id="poder1"></span></td>
                     </tr>
                     <tr>
                         <td>Bônus:</td>
-                        <td><span id="bonus1"></span></td>
+                        <td style="font-weight: bold"><span id="bonus1"></span></td>
                     </tr>
                     <tr>
                         <td style="font-weight: bold">Impacto Total:</td>
@@ -67,11 +67,11 @@
                     </tr>
                     <tr>
                         <td>Faz parte de Set?</td>
-                        <td><span id="set1"></span></td>
+                        <td style="font-weight: bold"><span id="set1"></span></td>
                     </tr>
                     <tr>
                         <td>Repetida/Merge:</td>
-                        <td><span id="merge1"></span></td>
+                        <td style="font-weight: bold"><span id="merge1"></span></td>
                     </tr>                    
                 </tbody>
                 <thead>
@@ -85,15 +85,15 @@
                     </tr>
                     <tr>
                         <td>Miner:</td>
-                        <td><span id="nome2"></span></td>
+                        <td style="font-weight: bold"><span id="nome2"></span></td>
                     </tr>
                     <tr>
                         <td>Poder:</td>
-                        <td><span id="poder2"></span></td>
+                        <td style="font-weight: bold"><span id="poder2"></span></td>
                     </tr>
                     <tr>
                         <td>Bônus:</td>
-                        <td><span id="bonus2"></span></td>
+                        <td style="font-weight: bold"><span id="bonus2"></span></td>
                     </tr>
                     <tr>
                         <td style="font-weight: bold">Impacto Total:</td>
@@ -101,11 +101,11 @@
                     </tr>
                     <tr>
                         <td>Faz parte de Set?</td>
-                        <td><span id="set2"></span></td>
+                        <td style="font-weight: bold"><span id="set2"></span></td>
                     </tr>
                     <tr>
                         <td>Repetida/Merge:</td>
-                        <td><span id="merge2"></span></td>
+                        <td style="font-weight: bold"><span id="merge2"></span></td>
                     </tr>                      
                 </tbody>
                 <thead>
