--- a/impacto.html
+++ b/impacto.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>RKFox - Calculadora de Menor Impacto</title>
+    <title>RKFox - Planejador de Salas</title>
     <link rel="stylesheet" href="styles4.css">
 </head>
 <body>    
