--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>RKFox - Linktree</title>
     <link rel="stylesheet" href="styles.css">
 </head>
-<body>    
+<body>
     <div class="container">
         <div class="ref1">
             <!--Start rollercoin.com code-->
@@ -21,6 +21,13 @@
         <div class="banner">
             <img src="/images/banner.png" alt="Banner" class="banner-img">
         </div>
+        
+        <!-- Toggle Switch -->
+        <label class="switch">
+            <input type="checkbox" id="toggle-dark-mode">
+            <span class="slider"></span>
+        </label>
+        
         <div class="links">
             <H2>Midias Sociais</H2>
             <a href="https://www.youtube.com/@rkfox" target="_blank">YouTube</a>
@@ -80,5 +87,6 @@
             <h4><p>Contato Profissional: <a href="mailto:canalrkfox@gmail.com">canalrkfox@gmail.com</a></p></h4>
         </div>
     </div>
+    <script src="script.js"></script>
 </body>
 </html>
