--- a/ranking/ranking.html
+++ b/ranking/ranking.html
@@ -26,37 +26,39 @@
                 <img src="/images/banner.png" alt="Banner" class="banner-img">
             </a>
         </div>
-            <!-- Toggle Switch -->
-            <label class="switch">
-                <input type="checkbox" id="toggle-dark-mode">
-                <span class="slider"></span>
-            </label>
-    <div class="ranking">
-        <h1>Ranking da Comunidade</h1>
-        <h3>47 Membros - Referência: 03/08/2024</h3>
-        <table id="rankingTable">
-            <thead>
-                <tr>
-                    <th>Rank</th>
-                    <th></th>
-                    <th>Nick</th>
-                    <th>Miners</th>
-                    <th>Bônus (%)</th>
-                    <th>Bônus</th>
-                    <th>Racks</th>
-                    <th>Poder Total</th>
-                    <th>Progresso</th>
-                    <th>Link</th>
-                    <th>Farm</th>
-                </tr>
-            </thead>
-            <tbody>
-                <!-- Os dados serão inseridos aqui -->
-            </tbody>
-        </table>
+        
+        <!-- Toggle Switch Centralizado -->
+        <label class="switch">
+            <input type="checkbox" id="toggle-dark-mode">
+            <span class="slider"></span>
+        </label>
+
+        <div class="ranking">
+            <h1>Ranking da Comunidade</h1>
+            <h3>46 Membros - Referência: 24/07/2024</h3>
+            <table id="rankingTable">
+                <thead>
+                    <tr>
+                        <th>Rank</th>
+                        <th></th>
+                        <th>Nick</th>
+                        <th>Miners</th>
+                        <th>Bônus (%)</th>
+                        <th>Bônus</th>
+                        <th>Racks</th>
+                        <th>Poder Total</th>
+                        <th>Progresso</th>
+                        <th>Link</th>
+                        <th>Farm</th>
+                    </tr>
+                </thead>
+                <tbody>
+                    <!-- Os dados serão inseridos aqui -->
+                </tbody>
+            </table>
+        </div>
+        <script src="ranking.js"></script>
+        <script src="script2.js"></script>
     </div>
-    <script src="ranking.js"></script>
-    <script src="script2.js"></script>
-</div>
 </body>
 </html>
