--- a/impacto/index.html
+++ b/impacto/index.html
@@ -6,15 +6,15 @@
     <title>RKFox - Planejador de Salas</title>
     <link rel="stylesheet" href="styles4.css">
 </head>
-<body>    
+<body>
     <div class="container">
         <div class="ref1">
             <!--Start rollercoin.com code-->
             <a href="https://rollercoin.com/?r=kyluudij">
-                <img src="https://static.rollercoin.com/static/img/ref/gen2/w320h50.png"/> 
-            </a> 
+                <img src="https://static.rollercoin.com/static/img/ref/gen2/w320h50.png" alt="Rollercoin Referral">
+            </a>
             <!--End rollercoin.com code-->
-        </div>    
+        </div>
         <div class="profile">
             <a href="https://rk-fox.github.io/">
                 <img src="/images/profile.png" alt="Foto de Perfil" class="profile-pic">
@@ -35,125 +35,125 @@
             <div>
                 <img id="avatar" src="" alt="Avatar do usuário" style="display: none; margin: auto;">
                 <h3 id="welcomeMessage"></h3>
-            <table>
-                <thead>
-                    <tr>
-                        <th colspan="2">Planejamento de Menor Impacto</th>
-                    </tr>
-                    <tr>
-                        <th colspan="2">1º Lugar</th>
-                    </tr>
-                </thead>
-                <tbody>
-                    <tr>
-                        <td colspan="2"><img id="img1" src="" style="display: none; margin: auto;"></td>
-                    </tr>
-                    <tr>
-                        <td>Miner:</td>
-                        <td><span id="nome1"></span></td>
-                    </tr>
-                    <tr>
-                        <td>Poder:</td>
-                        <td style="font-weight: bold"><span id="poder1"></span></td>
-                    </tr>
-                    <tr>
-                        <td>Bônus:</td>
-                        <td style="font-weight: bold"><span id="bonus1"></span></td>
-                    </tr>
-                    <tr>
-                        <td style="font-weight: bold">Impacto Total:</td>
-                        <td style="font-weight: bold"><span id="impact1"></span></td>
-                    </tr>
-                    <tr>
-                        <td>Faz parte de Set?</td>
-                        <td style="font-weight: bold"><span id="set1"></span></td>
-                    </tr>
-                    <tr>
-                        <td>Repetida/Merge:</td>
-                        <td style="font-weight: bold"><span id="merge1"></span></td>
-                    </tr>                    
-                </tbody>
-                <thead>
-                    <tr>
-                        <th colspan="2">2º Lugar</th>
-                    </tr>
-                </thead>
-                <tbody>
-                    <tr>
-                        <td colspan="2"><img id="img2" src="" style="display: none; margin: auto;"></td>
-                    </tr>
-                    <tr>
-                        <td>Miner:</td>
-                        <td style="font-weight: bold"><span id="nome2"></span></td>
-                    </tr>
-                    <tr>
-                        <td>Poder:</td>
-                        <td style="font-weight: bold"><span id="poder2"></span></td>
-                    </tr>
-                    <tr>
-                        <td>Bônus:</td>
-                        <td style="font-weight: bold"><span id="bonus2"></span></td>
-                    </tr>
-                    <tr>
-                        <td style="font-weight: bold">Impacto Total:</td>
-                        <td style="font-weight: bold"><span id="impact2"></span></td>
-                    </tr>
-                    <tr>
-                        <td>Faz parte de Set?</td>
-                        <td style="font-weight: bold"><span id="set2"></span></td>
-                    </tr>
-                    <tr>
-                        <td>Repetida/Merge:</td>
-                        <td style="font-weight: bold"><span id="merge2"></span></td>
-                    </tr>                      
-                </tbody>
-                <thead>
-                    <tr>
-                        <th colspan="2">3º Lugar</th>
-                    </tr>
-                </thead>
-                <tbody>
-                    <tr>
-                        <td colspan="2"><img id="img3" src="" style="display: none; margin: auto;"></td>
-                    </tr>
-                    <tr>
-                        <td>Miner:</td>
-                        <td style="font-weight: bold"><span id="nome3"></span></td>
-                    </tr>
-                    <tr>
-                        <td>Poder:</td>
-                        <td style="font-weight: bold"><span id="poder3"></span></td>
-                    </tr>
-                    <tr>
-                        <td>Bônus:</td>
-                        <td style="font-weight: bold"><span id="bonus3"></span></td>
-                    </tr>
-                    <tr>
-                        <td style="font-weight: bold">Impacto Total:</td>
-                        <td style="font-weight: bold"><span id="impact3"></span></td>
-                    </tr>
-                    <tr>
-                        <td>Faz parte de Set?</td>
-                        <td style="font-weight: bold"><span id="set3"></span></td>
-                    </tr>
-                    <tr>
-                        <td>Repetida/Merge?</td>
-                        <td style="font-weight: bold"><span id="merge3"></span></td>
-                    </tr>                      
-                </tbody>
-            </table>                  
+                <table>
+                    <thead>
+                        <tr>
+                            <th colspan="2">Planejamento de Menor Impacto</th>
+                        </tr>
+                        <tr>
+                            <th colspan="2">1º Lugar</th>
+                        </tr>
+                    </thead>
+                    <tbody>
+                        <tr>
+                            <td colspan="2"><img id="img1" src="" style="display: none; margin: auto;"></td>
+                        </tr>
+                        <tr>
+                            <td>Miner:</td>
+                            <td><span id="nome1"></span></td>
+                        </tr>
+                        <tr>
+                            <td>Poder:</td>
+                            <td style="font-weight: bold"><span id="poder1"></span></td>
+                        </tr>
+                        <tr>
+                            <td>Bônus:</td>
+                            <td style="font-weight: bold"><span id="bonus1"></span></td>
+                        </tr>
+                        <tr>
+                            <td style="font-weight: bold">Impacto Total:</td>
+                            <td style="font-weight: bold"><span id="impact1"></span></td>
+                        </tr>
+                        <tr>
+                            <td>Faz parte de Set?</td>
+                            <td style="font-weight: bold"><span id="set1"></span></td>
+                        </tr>
+                        <tr>
+                            <td>Repetida/Merge:</td>
+                            <td style="font-weight: bold"><span id="merge1"></span></td>
+                        </tr>
+                    </tbody>
+                    <thead>
+                        <tr>
+                            <th colspan="2">2º Lugar</th>
+                        </tr>
+                    </thead>
+                    <tbody>
+                        <tr>
+                            <td colspan="2"><img id="img2" src="" style="display: none; margin: auto;"></td>
+                        </tr>
+                        <tr>
+                            <td>Miner:</td>
+                            <td style="font-weight: bold"><span id="nome2"></span></td>
+                        </tr>
+                        <tr>
+                            <td>Poder:</td>
+                            <td style="font-weight: bold"><span id="poder2"></span></td>
+                        </tr>
+                        <tr>
+                            <td>Bônus:</td>
+                            <td style="font-weight: bold"><span id="bonus2"></span></td>
+                        </tr>
+                        <tr>
+                            <td style="font-weight: bold">Impacto Total:</td>
+                            <td style="font-weight: bold"><span id="impact2"></span></td>
+                        </tr>
+                        <tr>
+                            <td>Faz parte de Set?</td>
+                            <td style="font-weight: bold"><span id="set2"></span></td>
+                        </tr>
+                        <tr>
+                            <td>Repetida/Merge:</td>
+                            <td style="font-weight: bold"><span id="merge2"></span></td>
+                        </tr>
+                    </tbody>
+                    <thead>
+                        <tr>
+                            <th colspan="2">3º Lugar</th>
+                        </tr>
+                    </thead>
+                    <tbody>
+                        <tr>
+                            <td colspan="2"><img id="img3" src="" style="display: none; margin: auto;"></td>
+                        </tr>
+                        <tr>
+                            <td>Miner:</td>
+                            <td style="font-weight: bold"><span id="nome3"></span></td>
+                        </tr>
+                        <tr>
+                            <td>Poder:</td>
+                            <td style="font-weight: bold"><span id="poder3"></span></td>
+                        </tr>
+                        <tr>
+                            <td>Bônus:</td>
+                            <td style="font-weight: bold"><span id="bonus3"></span></td>
+                        </tr>
+                        <tr>
+                            <td style="font-weight: bold">Impacto Total:</td>
+                            <td style="font-weight: bold"><span id="impact3"></span></td>
+                        </tr>
+                        <tr>
+                            <td>Faz parte de Set?</td>
+                            <td style="font-weight: bold"><span id="set3"></span></td>
+                        </tr>
+                        <tr>
+                            <td>Repetida/Merge?</td>
+                            <td style="font-weight: bold"><span id="merge3"></span></td>
+                        </tr>
+                    </tbody>
+                </table>
             </div>
+        </div>
         <div class="ref">
             <!--Start rollercoin.com code-->
             <a href="https://rollercoin.com/?r=kyluudij">
-                <img src="https://static.rollercoin.com/static/img/ref/gen2/w320h50.png"/> 
-            </a> 
+                <img src="https://static.rollercoin.com/static/img/ref/gen2/w320h50.png" alt="Rollercoin Referral">
+            </a>
             <!--End rollercoin.com code-->
         </div>
         <div class="email">
             <h4><p>Contato Profissional: <a href="mailto:canalrkfox@gmail.com">canalrkfox@gmail.com</a></p></h4>
         </div>
-    </div>
     </div>
     <script src="impact.js"></script>
 </body>
