--- a/impacto/index.html
+++ b/impacto/index.html
@@ -25,6 +25,11 @@
                 <img src="/images/banner.png" alt="Banner" class="banner-img">
             </a>
         </div>
+        <!-- Toggle Switch -->
+        <label class="switch">
+            <input type="checkbox" id="toggle-dark-mode">
+            <span class="slider"></span>
+        </label>
         <div class="calc">
             <h1>Planejador de Baleias</h1>
             <h3>Link da Sala (após /p/)</h3>
