--- a/impacto/index.html
+++ b/impacto/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>RKFox - Planejador de Salas</title>
     <link rel="stylesheet" href="styles4.css">
+    <script src="script2.js"></script>
 </head>
 <body>
     <div class="container">
