--- a/eficiencia/eficiencia.html
+++ b/eficiencia/eficiencia.html
@@ -25,6 +25,11 @@
                 <img src="/images/banner.png" alt="Banner" class="banner-img">
             </a>
         </div>
+        <!-- Toggle Switch -->
+        <label class="switch">
+            <input type="checkbox" id="toggle-dark-mode">
+            <span class="slider"></span>
+        </label>
         <div class="calc">
             <h1>Calculadora de Eficiência</h1>
             <h3>Link da Sala (após /p/)</h3>
@@ -132,5 +137,6 @@
         </div>
     </div>
     <script src="efficiency.js"></script>
+    <script src="script2.js"></script>
 </body>
 </html>
