--- a/eficiencia/index.html
+++ b/eficiencia/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <div class="container">
-        <div class="ref">
+        <div class="ref1">
             <!--Start rollercoin.com code-->
             <a href="https://rollercoin.com/?r=kyluudij">
                 <img src="https://static.rollercoin.com/static/img/ref/gen2/w320h50.png"/> 
