--- a/eficiencia/index.html
+++ b/eficiencia/index.html
@@ -135,6 +135,16 @@
                 </table>
             </div>
         </div>
+        <div class="ref">
+            <!--Start rollercoin.com code-->
+            <a href="https://rollercoin.com/?r=kyluudij">
+                <img src="https://static.rollercoin.com/static/img/ref/gen2/w320h50.png" alt="Rollercoin Referral">
+            </a>
+            <!--End rollercoin.com code-->
+        </div>
+        <div class="email">
+            <h4><p>Contato Profissional: <a href="mailto:canalrkfox@gmail.com">canalrkfox@gmail.com</a></p></h4>
+        </div>
     </div>
     <script src="efficiency.js"></script>
     <script src="script2.js"></script>
