--- a/eficiencia/index.html
+++ b/eficiencia/index.html
@@ -8,13 +8,13 @@
 </head>
 <body>
     <div class="container">
-        <div class="ref1">
+        <div class="ref">
             <!--Start rollercoin.com code-->
             <a href="https://rollercoin.com/?r=kyluudij">
-                <img src="https://static.rollercoin.com/static/img/ref/gen2/w320h50.png"/> 
-            </a> 
+                <img src="https://static.rollercoin.com/static/img/ref/gen2/w320h50.png" alt="Rollercoin Referral" style="center">
+            </a>
             <!--End rollercoin.com code-->
-        </div>    
+        </div>
         <div class="profile">
             <a href="https://rk-fox.github.io/">
                 <img src="/images/profile.png" alt="Foto de Perfil" class="profile-pic">
@@ -138,7 +138,7 @@
         <div class="ref">
             <!--Start rollercoin.com code-->
             <a href="https://rollercoin.com/?r=kyluudij">
-                <img src="https://static.rollercoin.com/static/img/ref/gen2/w320h50.png" alt="Rollercoin Referral">
+                <img src="https://static.rollercoin.com/static/img/ref/gen2/w320h50.png" alt="Rollercoin Referral" style="center">
             </a>
             <!--End rollercoin.com code-->
         </div>
