--- a/eficiencia/index.html
+++ b/eficiencia/index.html
@@ -11,7 +11,7 @@
         <div class="ref">
             <!--Start rollercoin.com code-->
             <a href="https://rollercoin.com/?r=kyluudij">
-                <img src="https://static.rollercoin.com/static/img/ref/gen2/w320h50.png" alt="Rollercoin Referral" style="center">
+                <center><img src="https://static.rollercoin.com/static/img/ref/gen2/w320h50.png" alt="Rollercoin Referral"></center>
             </a>
             <!--End rollercoin.com code-->
         </div>
@@ -138,7 +138,7 @@
         <div class="ref">
             <!--Start rollercoin.com code-->
             <a href="https://rollercoin.com/?r=kyluudij">
-                <img src="https://static.rollercoin.com/static/img/ref/gen2/w320h50.png" alt="Rollercoin Referral" style="center">
+                <center><img src="https://static.rollercoin.com/static/img/ref/gen2/w320h50.png" alt="Rollercoin Referral"></center>
             </a>
             <!--End rollercoin.com code-->
         </div>
