--- a/impacto/index.html
+++ b/impacto/index.html
@@ -152,12 +152,12 @@
         <div class="ref">
             <!--Start rollercoin.com code-->
             <a href="https://rollercoin.com/?r=kyluudij">
-                <img src="https://static.rollercoin.com/static/img/ref/gen2/w320h50.png" alt="Rollercoin Referral">
+                <center><img src="https://static.rollercoin.com/static/img/ref/gen2/w320h50.png" alt="Rollercoin Referral"></center>
             </a>
             <!--End rollercoin.com code-->
         </div>
         <div class="email">
-            <h4><p>Contato Profissional: <a href="mailto:canalrkfox@gmail.com">canalrkfox@gmail.com</a></p></h4>
+            <h4><p><center>Contato Profissional: <a href="mailto:canalrkfox@gmail.com">canalrkfox@gmail.com</a></center></p></h4>
         </div>
     </div>
     <script src="impact.js"></script>
