--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
             <a href="https://nexo.com/ref/o6frrzb0uc" target="_blank">NEXO (saque grátis de BTC)</a>
             <a href="https://sideshift.ai/a/RKFox" target="_blank">SideShift</a>
             <a href="https://ff.io/?ref=rkfox" target="_blank">Fixed Float</a>
-            <a href="https://accounts.binance.com/register?ref=362424028" target="_blank">Binance</a>
+            <a href="https://quantfury.com/portuge/" target="_blank">QuantFury REF: FN8G3J54</a>
             <H2>Jogos</H2>
             <a href="https://mysticgames.onelink.me/pSh7/2hce9ftz" target="_blank">Call Of The Voyd</a>
             <a href="https://piratenation.game/play?code=P-rare-grog-1237" target="_blank">Pirate Nation</a>
