--- a/ranking/index.html
+++ b/ranking/index.html
@@ -33,6 +33,13 @@
             <span class="slider"></span>
         </label>
 
+        <div id="loadingBar">
+            <div class="loading-container">
+                <div class="loading-bar" id="loadingProgress"></div>
+            </div>
+        </div>
+
+        
         <div class="ranking">
             <h1>Ranking da Comunidade</h1>
             <h3>48 Membros - Referência: 03/08/2024</h3>
