--- a/ranking/index.html
+++ b/ranking/index.html
@@ -32,6 +32,10 @@
             <input type="checkbox" id="toggle-dark-mode">
             <span class="slider"></span>
         </label>
+
+        <div class="progress-container">
+            <div id="progress-bar" class="progress-bar">0%</div>
+        </div>
         
         <div class="ranking">
             <h1>Ranking da Comunidade</h1>
