--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
             <H2>Midias Sociais</H2>
             <a href="https://www.youtube.com/@rkfox" target="_blank">YouTube</a>
             <a href="https://www.youtube.com/channel/UCWjTp4cvdMTGvJ6ntjea9nA/join" target="_blank">Seja um Apoiador</a>
-            <a href="https://t.me/canalrkfox" target="_blank">Telegram</a>
+            <!-- <a href="https://t.me/canalrkfox" target="_blank">Telegram</a> -->
             <H2>Utilidades RollerCoin</H2>
             <a href="https://rollercoin.com/?r=kyluudij" target="_blank">RollerCoin</a>
             <a href="https://rk-fox.github.io/ranking/index.html" target="_blank">Ranking da Comunidade</a>            
