--- a/index.html
+++ b/index.html
@@ -51,6 +51,9 @@
             <a href="https://discord.com/" target="_blank">Passo 1: Ter um Discord</a>
             <a href="https://discord.com/invite/EDyWFmN" target="_blank">Passo 2: Acessar Discord do RC</a>
             <a href="https://docs.google.com/forms/d/e/1FAIpQLSe6TwbTGZjSw-RsOi8xENyGPykY_34qukqMuNNOlqa2v32g1A/viewform" target="_blank">Passo 3: Responder o Formulário</a>
+            <h2>Reset de Jogos</h2>
+            <a href="" target="_blank">Vídeo Tutorial</a>
+            <a href="https://docs.google.com/spreadsheets/d/1EgiSq3401Ul1ckDfdqzroW1UGjCoIuwL/edit?usp=sharing&ouid=116302633550564034399" target="_blank">Planilha de Controle</a>
             <H2>Cripto</H2>
             <a href="https://nexo.com/ref/o6frrzb0uc" target="_blank">NEXO (saque grátis de BTC)</a>
             <a href="https://sideshift.ai/a/RKFox" target="_blank">SideShift</a>
