--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
             <a href="https://discord.com/invite/EDyWFmN" target="_blank">Passo 2: Acessar Discord do RC</a>
             <a href="https://docs.google.com/forms/d/e/1FAIpQLSe6TwbTGZjSw-RsOi8xENyGPykY_34qukqMuNNOlqa2v32g1A/viewform" target="_blank">Passo 3: Responder o Formulário</a>
             <h2>Reset de Jogos</h2>
-            <a href="" target="_blank">Vídeo Tutorial</a>
+            <a href="https://www.youtube.com/watch?v=Wj4AaY9-ZmA" target="_blank">Vídeo Tutorial</a>
             <a href="https://docs.google.com/spreadsheets/d/1EgiSq3401Ul1ckDfdqzroW1UGjCoIuwL/edit?usp=sharing&ouid=116302633550564034399" target="_blank">Planilha de Controle</a>
             <H2>Cripto</H2>
             <a href="https://nexo.com/ref/o6frrzb0uc" target="_blank">NEXO (saque grátis de BTC)</a>
