--- a/ranking/index2.html
+++ b/ranking/index2.html
@@ -54,6 +54,7 @@
                         <th>Progresso</th>
                         <th>Link</th>
                         <th>Farm</th>
+                        <th>Histórico</th>
                     </tr>
                 </thead>
                 <tbody>
@@ -63,6 +64,7 @@
         </div>
         <script src="ranking.js"></script>
         <script src="script2.js"></script>
+        <script src="hist.js></script>
     </div>
 </body>
 </html>
