--- a/ranking/index2.html
+++ b/ranking/index2.html
@@ -54,7 +54,7 @@
                         <th>Progresso</th>
                         <th>Link</th>
                         <th>Farm</th>
-                        <th>Histórico</th>
+                        <th>Hist</th>
                     </tr>
                 </thead>
                 <tbody>
